the last thress sections make responsive

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,7 +61,7 @@ iframe {
 }
 
 /* ====> rechart style */
-.recharts-surface {
+.miniChart .recharts-surface {
   border-radius: 40px !important;
 }
 
