--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,3 +111,8 @@ iframe {
   --gradient-1: theme("colors.light-theme.gradient-1");
   --gradient-2: theme("colors.light-theme.gradient-2");
 }
+
+/* =====> accordian global style */
+.question [aria-expanded="true"] {
+  background-color: var(--gradient-1) !important;
+}
