tokenomics half section completed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,3 +111,5 @@ iframe {
   --gradient-1: theme("colors.light-theme.gradient-1");
   --gradient-2: theme("colors.light-theme.gradient-2");
 }
+
+/* bar style */
