fonts for thr trading widget changed

--- a/styles/klinechart.css
+++ b/styles/klinechart.css
@@ -39,3 +39,6 @@
 .klinecharts-pro-widget > div > div:nth-child(2) {
   display: none !important;
 }
+.klinecharts-pro-content {
+  font-family: "Inter", "sans-serif";
+}
